assets/style.scss
/* ... */
.py-2 {
    padding: 2rem 0;
}

.mb-5 {
    margin-bottom: 5rem;
}

.m-1 {
    margin: 1rem 0;
}

.mr-1 {
    margin-right: 1rem;
}

.mr-05 {
    margin-right: .5rem;
}

.my-10 {
    margin: 10vh 0;
}

.py-10 {
    padding: 10vh 0
}

.mt-5 {
    margin-top: 5vh;
}

.mt-10 {
    margin-top: 10vh;
}

// preloader

.preloader {
    background: #fff;
    width: 100%;
    height: 100vh;
    display: grid;
    place-items: center;
    position: fixed;
    top: 0;
    z-index: 100;

    &.up {
        transform: translateY(-100%);
        transition: var(--transition-2);
    }

    .progress {
        height: 2px;
        background: #333;
    }
}



nav {
    padding: 2rem 0;
    display: grid;
    grid-template-columns: 30% 40% 30%;
    align-items: center;


    .menu-item-has-children {
        position: relative;

        .sub-menu {
            position: absolute;
            background: #fff;
            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
            width: max-content;
            padding: 1rem;
            transform: scaleY(0);
            transform-origin: center top 0;
        }

        &:hover {

            .sub-menu {

                transform: scaleY(1);
                transition: var(--transition-2);

                li:first-of-type {
                    margin-bottom: 1rem;
                }

            }
        }


    }
}


a {
    position: relative;
}

ul li a::after {
    content: '';
    position: absolute;
    display: block;
    display: block;
    bottom: 0;
    left: 50%;
    width: 0%;
    background: #333;
}

ul li a:hover::after {
    height: 2px;
    width: 100%;
    left: 0;
    transition: var(--transition-1);
}

// section button

.section-btn {
    text-align: end;
}

.section-btn a {
    width: 20rem;
    border: var(--border-black);
    padding: 1rem 3rem;
    position: relative;
}

.section-btn a:hover {
    opacity: .7;
}

// searchform.php

form {
    justify-self: end;
}

input {
    border: none;
    display: block;
    font-size: 1rem;
    text-align: center;
    border-bottom: 2px solid #333;
    width: 4rem;
    justify-self: end;
    background: none;
}

input:focus {
    outline: none;
    transition: var(--transition-2);
    width: 6rem;
}

button {
    display: none;
}


// single-series.php

.top-wrapper {
    img {
        height: 500px;
        animation: fadeIn 1s linear;

        @keyframes fadeIn {
            from {
                opacity: 0;
            }

            to {
                opacity: 1;
            }
        }
    }
}



.text-wrapper {

    h2 {
        font-size: 3rem;
        margin-bottom: 4rem;
        width: fit-content;
        position: relative;
    }

    span:first-of-type {
        color: lightgrey;
    }
}

.text-wrapper h2::before {
    content: '';
    position: absolute;
    right: 0;
    width: 100%;
    height: 100%;
    background: var(--accent-1);
    animation: opacity 1s 1s forwards;

}

@keyframes opacity {
    to {
        width: 0;
    }
}

.text-wrapper p {
    padding: 1rem 0 1rem 3rem;
    position: relative;
}


.text-wrapper p::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 2px;
    height: 0;
    background: var(--accent-1);
    animation: height 1s linear forwards;
}

@keyframes height {
    from {
        height: 0;
    }

    to {
        height: 100%;
    }
}

/* side social icons */

.social-wrapper {
    position: fixed;
    top: 50%;
    right: -100;
    transform: translateY(-50%);

    &.on {
        right: 0;
        transition: var(--transition-1);
    }

    a {
        display: block;

    }
}


// taxonomy-serie-color.php

.tax-top {
    width: 100%;
    height: 400px;
    background: url(../img/tax-color.jpeg) 100% 80%;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.tax-container {

    .top-wrapper {
        cursor: pointer;
        position: relative;

        .img-wrapper {
            overflow: hidden;
            width: 100%;

            &:hover {

                img {
                    transform: scale(1.1);
                    transition: var(--transition-1);
                }
            }
        }

        .text-wrapper {
            width: 100%;
            position: absolute;
            bottom: 0;
            left: 0;
            z-index: 1;
            background: rgba(255, 255, 255, .6);

            h3 {
                font-size: 2rem;
                border-bottom: var(--border-gray);
                width: 100%;
            }

        }
    }
}

// blog post page: home.php

.home-container {


    .blog-item {

        border-bottom: var(--border-black);

        img {
            max-width: 500px;
            max-height: 600px;
            width: 100%;
            height: auto;
        }

        .content:nth-of-type(even) {
            grid-column: 1;
        }
    }
}

// aside for sidebar.php

aside {
    h3 {
        border-bottom: var(--border-black);
    }
}
/* ... */

